fix: remove antd-modal z-index

--- a/src/App.less
+++ b/src/App.less
@@ -759,10 +759,3 @@ span:hover {
 .tos-modal-wrapper {
   z-index: 100000;
 }
-
-.ant-modal-wrap {
-  z-index: 0;
-}
-.ant-modal-mask {
-  z-index: 0;
-}
